# TeleManager

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PLAN.md  README.md  ROADMAP.md  package-lock.json  package.json  plan.md  pyproject.toml  pyrightconfig.json  requirements-build.txt  requirements.txt  run.bat  run.sh  telemanager.spec  testing_review.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FRONTEND_TEMPLATE_MIGRATION.md  NEXTJS_MIGRATION_PLAN.md  PRODUCT_WORKFLOW_PLAN.md  REAL_TELEGRAM_TEST_CHECKLIST.md  ROADMAP.md  SECURITY.md
plans/: 001-finish-app-password.md  002-app-password-http-tests.md  003-cancellable-queue-delay.md  004-redact-queue-audit-payload.md  005-account-settings-route-tests.md  006-docs-theme-and-version-hygiene.md  007-scheduler-dirty-flag.md  008-accessible-color-tokens.md  009-primitives-focus-motion.md  010-warning-info-token-migration.md  011-primary-text-migration.md  012-copy-and-swatches.md  013-preserve-app-password-settings.md  014-recoverable-native-schedule-deletion.md  015-enforce-local-browser-origin.md  016-serialize-audit-log.md  017-atomic-session-export.md  018-bound-session-imports.md  019-repair-docs-version-metadata.md  README.md
scripts/: build-release.py  gen-assets.mjs  sync_version.py
tests/: conftest.py  test_account_settings.py  test_action_conditions.py  test_action_queue.py  test_action_tiers.py  test_advanced_actions.py  test_app_password.py  test_audit.py  test_audit_trim.py  test_backend_hardening.py  test_dialog_photos.py  test_dialogs_messages.py  test_dialogs_sessions.py  test_export_chat.py  test_security.py  (+19 more)
(+173 files in other folders)
