[project]
name = "telemanager"
version = "1.16.0"
description = "Local Telegram session manager for managing Telethon .session files."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "telethon==1.38.1",
  "pydantic==2.10.4",
  "python-multipart==0.0.20",
  "bcrypt==5.0.0",
]

[project.optional-dependencies]
dev = ["ruff==0.8.4", "pytest==8.3.4", "httpx==0.28.1"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
